argocd/apps/infra/attic/fmt2/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attic-ingress
  namespace: attic
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/target: "fmt2-traefik-k8s.generalprogramming.org"
spec:
  rules:
    - host: attic.owo.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: attic
                port:
                  name: http
